# skidmarks

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.cargo/: config.toml
assets/: fileexplorer.css  streaks.css
config/: Default.toml  Testing.toml
src/: cli.rs  color.rs  db.rs  filtering.rs  gui.rs  lib.rs  main.rs  settings.rs  sorting.rs  streak.rs  streaks.rs  tui.rs
src/cli/: cli.rs  mod.rs  table.rs
src/gui/: file_explorer.rs  gui.rs  mod.rs
src/tui/: mod.rs  tui.rs
