[package]
name = "skidmarks"
version = "0.1.1"
edition = "2021"
description = "A simple CLI for tracking streaks"
repository = "https://github.com/kennethlove/skidmarks"
readme = "README.md"
license-file = "LICENSE"
keywords = ["cli", "streaks", "habits"]
categories = ["command-line-utilities"]
include = [
  "config/"
]

[dependencies]
ansi_term = "0.12.1"
assert_cmd = "2.0.15"
assert_fs = "1.1.2"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive"] }
config = "0.14.0"
console = "0.15.8"
dirs = "5.0.1"
lazy_static = "1.5.0"
ron = "0.8.1"
serde = { version = "1.0.204", features = ["derive"] }
tabled = { version = "0.15.0", features = ["ansi"] }


